[package]
name = "fast_trim"
version = "0.1.0"
edition = "2024"

[dependencies]
# libvips wrapper (ensure libvips C-library is installed on your system)
libvips = "1.0.5.12
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.101"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true # Removes debug symbols for smaller/faster loading binary
