[package]
name = "crop-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
rayon = "1.11.0"
oxipng = "10.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
anyhow = "1.0.101"
mimalloc ="0.1.48"

[profile.release]
lto = true
codegen_units = 1
panic = 'abort'
strip = true
